testsuite/poke.pkl/struct-field-pretty-print-diag-2.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    int lala;
    method _print_lala = (int a) void: { print "foo"; } /* { dg-error "should be of type" } */
  };
